# Project_Listonic

./: CMakeLists.txt  Client.h  ItemMgr.cpp  ItemMgr.h  Items.cpp  Items.h  List.h  ListMgr.cpp  ListMgr.h  Observer.h  Program.h  PurchaseMgr.h  README.md  Subject.h  header.h  main.cpp
test/: CMakeLists.txt  ItemMgrTesting.cpp  ItemsTesting.cpp  ListMgrTesting.cpp  RunALL.cpp
